Change fnslide margin

--- a/css/fnstyles.css
+++ b/css/fnstyles.css
@@ -70,8 +70,8 @@ ul {
 }
 
 .fnslide {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 3vw;
+    margin-right: 3vw;
 }
 
 .slick-prev::before, .slick-next::before {
